fix(button): fix text alignement

--- a/src/components/elements/buttons/button/Button.styl
+++ b/src/components/elements/buttons/button/Button.styl
@@ -35,7 +35,7 @@ $Button = {
 
     &__text,
     [class^="wgf-icon-"] {
-      vertical-align: text-top;
+      vertical-align: text-bottom;
     }
   }
 
